fix codeblock spacing

--- a/src/pages/cemanimation/index.styl
+++ b/src/pages/cemanimation/index.styl
@@ -42,7 +42,7 @@ a
     
   code, pre
     background-color: var(--color-grey-light)
-    padding: 2px 4px 4px 4px
+    padding: 0 4px
     border: 1px solid var(--color-grey)
     user-select: text
     cursor: text
